# kindle-to-pdf-capture

./: .env.example  CONTRIBUTING.md  LICENSE  README.md  kindle_to_pdf.py  main.py  pyproject.toml  requirements.txt
kindle_to_pdf/: __init__.py  cli.py  config.py  converter.py  logger.py  utils.py
src/kindle_capture/: __init__.py  capture.py  cli.py  config.py  pdf.py
